--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                       <input type="hidden" name="access_key" value="4849c91c-10f5-40f7-a335-35387aa75f48">
                       <input id="name_input" type="text" name="Name" placeholder="Name" required>
                       <input id="email_input" type="email" name="Email" placeholder="Email" required>
-                      <textarea id="message_text_area" name="Message" rows="6" placeholder="Leave a Message Here" required></textarea>
+                      <textarea id="message_text_area" name="Message" rows="6" placeholder="Leave a Message Here"></textarea>
                       <!-- <button type="submit" class="btn btn2" onclick="clearFormInputs()">Submit</button> -->
-                      <input type="submit" value="Submit" id="btnsubmit" onclick="clearFormInputs()">
+                      <input type="submit" value="Submit" id="btnsubmit" oninput="clearFormInputs()" onload="clear()" onclick="window.location.reload(true);">
 
                   </form>
              </div>
@@ -123,13 +123,28 @@
       var emailInput = document.getElementById('email_input').value;
       var messageInput = document.getElementById('message_text_area').value;
 
-      if (nameInput === '' || emailInput === '' || messageInput === '') {
-          return;
+      if (nameInput != '' && emailInput != '' && messageInput != '') {
+        var form = document.forms['contact-form'];
+        form.submit();
+        form.reset();
+        window.location.reload(true);
+        return true;
       }
+    }
 
-      var form = document.forms['contact-form'];
-      form.submit();
-      form.reset();
+    function clear() {
+          var nameInput = document.getElementById('name_input').value;
+          var emailInput = document.getElementById('email_input').value;
+          var messageInput = document.getElementById('message_text_area').value;
+
+          if (nameInput != '' && emailInput != '' && messageInput != '') {
+            document.getElementById('name_input').value = '';
+            document.getElementById('email_input').value = '';
+            document.getElementById('message_text_area').value = '';
+          }
+
+          window.location.reload(true);
+          return true;
     }
   </script>
   
